# OpenSentinel

./: .env.example  .gitignore  AGENTS.md  AGENT_CLEANUP.md  AGENT_COMPLETION_FIXES.md  GITIGNORE_SECURITY.md  GRACEFUL_DEGRADATION.md  NVIDIA_MODEL_RECOMMENDATIONS.md  PRD.md  README.md  SESSION_SUMMARY.md  SETUP_GUIDE.md  TEST_QUERIES.md  agent.py  clear_agent_cache.py  config.py  diagnose_agent.py  inspect_failed_run.py  langgraph.json  orchestrator.yaml  prompt.py  promptreference.txt  pyproject.toml  quick_test.py  requirements.txt  run-d13c2e95-b482-4763-b9ac-3ee6c00f923c.json  run_test.bat  system_prompt.md  test_agent.py  test_minimal_agent.py  test_simple_query.py  test_tokyo_query.py  workflow-orchestration.md
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl  store.pckl
agent/: __init__.py  agent.py  agent_professional.py  registry.py
agent/backend/: memory.py  postgres_checkpointer.py
agent/capabilities/: CAPABILITIES.md
agent/config/: config.py
agent/logger/: __init__.py  logging.py
agent/middleware/: __init__.py  followups.py  guardrails.py  observability.py  provider_retry.py  rate_limit.py  response_style.py  routing.py  source_citation.py
agent/prompt/: __init__.py  loader.py  system_prompt.py
agent/prompt/modules/: core.md  safety.md  skills.md  subagents.md  tools.md
agent/sandbox/: __init__.py  sandbox.py
agent/skills/: README.md
agent/skills/debugging-skill/: SKILL.md
agent/skills/decision-tradeoff-skill/: SKILL.md
agent/skills/mood-skill/: SKILL.md
agent/skills/planning-skill/: SKILL.md
agent/skills/reflection-skill/: SKILL.md
agent/skills/retrieval-synthesis-skill/: SKILL.md
agent/skills/test-design-skill/: SKILL.md
agent/skills/uncertainty-skill/: SKILL.md
agent/skills/verification-skill/: SKILL.md
agent/subagents/: __init__.py  fact_check.py  finance.py  lazy_loader.py  morning_briefing.py  news.py  weather.py
agent/tools/: __init__.py  crypto.py  currency.py  file_browser.py  followup_writer.py  gmail.py  internet_search.py  lazy_loader.py  system_monitoring.py  tool_search.py  weather.py  web_browser.py  yahoo_finance.py
agent_eval/: MIGRATION_GUIDE.md  README.md  __init__.py  config.py  datasets.py  evaluators.py  examples.py  offline_evaluation.py  online_evaluation.py
backend/: __init__.py  memory.py
examples/: simple_usage.py
gateway/: __init__.py  __main__.py  cli.py  config.py  scheduler.py  terminal.py
skills/report-generation/: SKILL.md
src/: main.py  system_prompt.md
src/Agent/: agent.py  llm_factory.py
src/Agent/functions/: __init__.py  agent_composition.py
src/Agent/prompts/: README.md  capabilities.md  core.md  quality_standards.md  safety.md
src/Agent/skills/approval-workflow/: SKILL.md
src/Agent/skills/daily-briefing/: SKILL.md
src/Agent/skills/document-research/: SKILL.md
src/Agent/skills/email-processing/: SKILL.md
src/Agent/skills/email-triage/: SKILL.md
src/Agent/skills/financial-analysis/: SKILL.md
src/Agent/skills/research/: SKILL.md
src/Agent/skills/smart-scheduling/: SKILL.md
src/Agent/skills/system-health-check/: SKILL.md
src/Agent/skills/task-extraction/: SKILL.md
src/Agent/subagents/: __init__.py  approval_gatekeeper.py  culinary_advisor.py  daily_briefing_compiler.py  email_triage_specialist.py  financial_analyst.py  general_researcher.py  report_compiler.py  report_generator.py  research_analyst.py  research_assistant.py  research_specialist.py  scheduling_coordinator.py  system_monitor.py  task_strategist.py  travel_coordinator.py  weather_advisor.py  weather_strategist.py
src/Agent/tools/: __init__.py  _search_engine.py  approvals.py  calendar.py  content_generation.py  core.py  documents.py  email.py  email_tools.py  food_recipe.py  messaging.py  permissions.py  research_analysis.py  system_monitoring.py  tasks.py  transport.py  universal.py  weather.py  web_browser.py  web_search.py
src/config/: __init__.py  base.py  cache.py  core.py  external_apis.py  logging_config.py  metrics.py  security.py  settings.py
src/logging/: __init__.py  logger.py
subagents/: __init__.py  fact_check.py  financial_analyst.py  report_compiler.py  research_specialist.py  weather_strategist.py
tests/middleware/: test_tool_call_normalizer.py
tools/: __init__.py  data_analysis.py  internet_search.py  web_search.py
ts/: browser_use.ts  crypto.ts  currency.ts  gmail.ts  yahoo-finance.ts
