[build-system]

requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenSentinel"
version = "0.1.0"
description = "OpenSentinel AI Agent "
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    # Core dependencies
    "langchain>=0.1.0",
    "langchain-nvidia-ai-endpoints>=0.3.0",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=2.0.0",
    "langgraph-cli[inmem]",
    "langchain-core>=0.1.0",
    "deepagents>=0.4.3",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "cachetools",
    "tavily-python",
    "llm-orchestrator[all] @ git+https://github.com/nicolasbahindwa/LLM_Orchestrator.git@main",
    
    # Code Quality & Linting
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.8",
    "isort>=5.13",               # Import sorting
    "pre-commit>=3.6",
]

[project.optional-dependencies]
dev = [

]

prod = [

]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
