[build-system]

requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenSentinel"
version = "0.1.0"
description = "OpenSentinel AI Agent built on DeepAgents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    # Core LangChain Framework
    "langchain>=1.2.0",
    "langchain-core>=1.2.0",
    "langgraph>=1.0.0",
    "langgraph-sdk>=0.3.0",
    "langgraph-checkpoint>=3.0.0",

    # DeepAgents Framework
    "deepagents>=0.4.4",

    # LLM Providers
    "langchain-nvidia-ai-endpoints>=0.3.0",  # NVIDIA NIM
    "langchain-anthropic>=1.3.0",
    "langchain-google-genai>=4.2.0",
    "openai>=1.0.0",
    "anthropic>=0.78.0",

    # Database & Persistence
    "langgraph-checkpoint-postgres>=0.1.0",
    "psycopg[binary,pool]>=3.0.0",

    # Tools & APIs
    "tavily-python>=0.7.0",           # Internet search
    "httpx>=0.27.0",                  # HTTP client for APIs
    "cachetools>=5.0.0",              # Tool caching

    # Configuration & Environment
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # LangGraph Development
    "langgraph-cli[inmem]>=0.3.0",

    # Custom LLM Orchestrator
    "llm-orchestrator[all] @ git+https://github.com/nicolasbahindwa/LLM_Orchestrator.git@main",

    # Code Quality & Linting
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.8",
    "isort>=5.13",
    "pre-commit>=3.6",
]

[project.optional-dependencies]
dev = [

]

prod = [

]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
